# ha-daikin-madoka

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/daikin_madoka/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/daikin_madoka/madoka/: __init__.py  connection.py  controller.py  feature.py  transport.py
custom_components/daikin_madoka/madoka/features/: clean_filter.py  fanspeed.py  operationmode.py  power.py  setpoint.py  temperatures.py
custom_components/daikin_madoka/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_init.py  test_vendored.py
